# hs-to-ciao

./: .gitignore  .travis.yml  LICENSE  README.md  TODO.md  TRANSLATION-IDEAS.md  hs-to-ciao.cabal  stack.yaml
CiaoManualExampleTerms/: FilterAndFoldIntsCiao.hs  FoldlCiao.hs  MapIntsCiao.hs  MapReduceCiao.hs
CoreDevManualExamples/: foldl.core  mapreduce.core  minitranslation.core  minitranslation2.core  test.core
CoreMasterManualExamples/: foldl.core  mapreduce.core  minitranslation.core  minitranslation2.core  test.core
analysis_scripts/: analyze_bigo  analyze_resources
examples/: FoldlADT.hs  Max.hs  QuickSort.hs  SmoothSort.hs  Tails.hs
examples/simple_examples/: Factorial.hs  Fibonacci.hs  Hanoi.hs
lib/: ciao_prelude.pl
manual_examples/: .#MiniTranslation2.pl  Constant.hs  FilterAndFoldInts.hs  FilterAndFoldInts.pl  Foldl.hs  Foldl.pl  FoldlADT.hs  InsertionSort.hs  IsThree.hs  ListReverse.hs  MapInts.hs  MapInts.pl  MapReduce.hs  MapReduce.pl  Max.hs  MergeSort.hs  MiniTranslation.hs  MiniTranslation.pl  MiniTranslation2.hs  MiniTranslation2.pl  SmoothSort.hs  case.pl  max.pl
manual_examples/simple_examples/: Append.hs
reports/: project-goals.tex
reports/project-goals/: project-goals.tex
src/: CiaoSyn.hs  Embedder.hs  HsToCiaoPP.hs  IDDictionary.hs
src/Dev/: CiaoSyn.hs  DataTypesTranslation.hs  Embedder.hs  Environment.hs  IDDictionary.hs  Translation.hs
src/Language/Ciao/: CEnv.hs  CGMonad.hs  CoreToCiao.hs  Misc.hs  Types.hs
src/Language/Ghc/: Misc.hs
src/PrettyPrinters/: AnalysisKinds.hs  BigO.hs  GeneralPrinter.hs
src/Translation/: CoreInstances.hs  DataTypesTranslation.hs  Environment.hs  MainTranslation.hs
tests/: Append.hs  Fold.hs  IncrInt3.hs  ListsMap.hs  Merge.hs  Repeat.hs  SumThreeList.hs
