name:                hs-to-ciao
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              nikivazou
maintainer:          nikivazou@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules:     HsToCiaoPP,
                       Dev.CiaoSyn
                       Dev.Translation 
                       Language.Ciao.CoreToCiao, 
                       Language.Ciao.Types, 
                       Language.Ciao.Misc, 
                       Language.Ciao.CGMonad, 
                       Language.Ciao.CEnv, 
                       Language.Ghc.Misc
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  build-depends:       base, ghc >= 8.4.4
  build-depends:       unordered-containers, mtl, hashable
  default-language:    Haskell2010
