name:                hs-to-ciao
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              nikivazou
maintainer:          nikivazou@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules:     HsToCiaoPP,
                       Dev.CiaoSyn
                       Dev.Translation
                       Dev.IDDictionary
                       Dev.DataTypesTranslation
                       Dev.Environment
                       Dev.Embedder
                       PrettyPrinters.GeneralPrinter
                       PrettyPrinters.AnalysisKinds
                       PrettyPrinters.BigO
                       Language.Ghc.Misc
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  build-depends:       base, ghc >= 8.4.4
  build-depends:       unordered-containers, monad-loops, mtl, hashable, regex-base, regex-compat, regex-pcre, text, process, directory, containers, split
  default-language:    Haskell2010
